# drf-api

./: pyproject.toml
drf_api_project/drf_api_project/: asgi.py  settings.py  urls.py  wsgi.py
