[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["Yonatan Palagashvili <yonimotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
pytz = "^2020.4"
sqlparse = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
